--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -17,10 +17,10 @@
     <string name="notes">Notatnik</string>
     <string name="deleting_folder">Usuwam folder \'%s\'</string>
     <string name="none">None</string>
-    <string name="label">Label</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="label">Etykieta</string>
+    <string name="transparent">Przezroczysty</string>
+    <string name="transparent_color">Prezroczysty kolor</string>
+    <string name="select_a_different_color">Wybierz inny kolor</string>
 
     <!-- Favorites -->
     <string name="favorites">Ulubione</string>
@@ -58,8 +58,8 @@
     <string name="filename_invalid_characters_placeholder">Nazwa \'%s\' zawiera niedozwolone znaki</string>
     <string name="extension_cannot_be_empty">Rozszerzenie pliku nie może być puste</string>
     <string name="source_file_doesnt_exist">Plik źródłowy nie istnieje</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames (before file extension)</string>
+    <string name="prepend_filenames">Poprzedzaj nazwy plików</string>
+    <string name="append_filenames">Dołączaj nazwy plików (przed rozszerzeniem)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiuj</string>
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">Plik \"%s\" już istnieje. Nadpisać?</string>
     <string name="folder_already_exists">Folder \"%s\" już istnieje</string>
     <string name="merge">Połącz</string>
-    <string name="keep_both">Keep both</string>
+    <string name="keep_both">Zachowaj oba</string>
     <string name="overwrite">Nadpisz</string>
     <string name="skip">Pomiń</string>
     <string name="append">Dodaj końcówkę \'_1\'</string>
@@ -224,8 +224,8 @@
     <string name="title">Tytuł</string>
     <string name="filename">Nazwa pliku</string>
     <string name="extension">Rozszerzenie</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">Losowo</string>
+    <string name="sort_randomly">Sortuj losowo</string>
     <string name="ascending">Rosnąco</string>
     <string name="descending">Malejąco</string>
     <string name="use_for_this_folder">Tylko w tym folderze</string>
@@ -370,7 +370,7 @@
     <string name="reminder_triggers_in">Czas pozostały do aktywacji przypomnienia:\n%s</string>
     <string name="alarm_warning">Upewnij się, że alarm działa poprawnie zanim zaczniesz na nim polegać. Przez ograniczenia związane m. in. z oszczędzaniem baterii coś może nie wypalić.</string>
     <string name="reminder_warning">Upewnij się, że przypomnienia działają poprawnie zanim zaczniesz na nich polegać. Przez ograniczenia związane m. in. z oszczędzaniem baterii coś może nie wypalić.</string>
-    <string name="notifications_disabled">Notifications of this application are disabled. Please go in your device settings for enabling them.</string>
+    <string name="notifications_disabled">Powiadomienia tej aplikacji zostały wyłączone. Przejdź do ustawień systemu, aby je z powrotem włączyć.</string>
 
     <!-- Alarms -->
     <string name="alarm">Alarm</string>
@@ -434,11 +434,12 @@
     <string name="files_restored_successfully">Pliki zostały przywrócone</string>
     <string name="empty_recycle_bin_confirmation">Czy na pewno chcesz opróżnić kosz? Pliki zostaną bezpowrotnie utracone.</string>
     <string name="recycle_bin_empty">Kosz jest pusty</string>
-    <string name="moving_recycle_bin_items_disabled">Moving Recycle bin items is disabled, please use Restore</string>
+    <string name="moving_recycle_bin_items_disabled">Przenoszenie elementów w koszu jest wyłączone. Użyj przywracania.</string>
 
     <plurals name="moving_items_into_bin">
-        <item quantity="one">Moving %d item into the Recycle Bin</item>
-        <item quantity="other">Moving %d items into the Recycle Bin</item>
+        <item quantity="one">Przenoszę %d element do kosza</item>
+        <item quantity="few">Przenoszę %d elementy do kosza</item>
+        <item quantity="other">Przenoszę %d elementów do kosza</item>
     </plurals>
 
     <!-- Import / Export -->
@@ -510,16 +511,16 @@
     <string name="sunday_short">Nie</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s. If you download it till then, you will be able to use it for free forever.</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro_long">Ta wersja aplikacji nie jest już rozwijana. Zaktualizuj ją do wersji Pro.</string>
+    <string name="it_is_free">Jest darmowa do %s. Jeśli pobierzesz ją do tego czasu, będziesz mieć ją bezterminowo za darmo.</string>
+    <string name="more_info">Więcej informacji</string>
+    <string name="upgrade">Aktualizuj</string>
 
     <!-- About -->
     <string name="about">O aplikacji</string>
     <string name="website_label">Nasza strona internetowa:</string>
     <string name="email_label">Napisz do nas, przyślij nam swoje uwagi:</string>
-    <string name="upgrade_to_pro">Upgrade to Pro</string>
+    <string name="upgrade_to_pro">Zaktualizuj do wersji Pro</string>
     <string name="more_apps_underlined"><u>Więcej naszych aplikacji</u></string>
     <string name="third_party_licences_underlined"><u>Licencje innych firm</u></string>
     <string name="invite_friends_underlined"><u>Zaproponuj aplikację znajomym</u></string>
