--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -19,8 +19,8 @@
     <string name="none">None</string>
     <string name="label">Label</string>
     <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent_color">Transparent farve</string>
+    <string name="select_a_different_color">Vælg en anden farve</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
@@ -58,8 +58,8 @@
     <string name="filename_invalid_characters_placeholder">Filnavnet \"%s\" indeholder ugyldige tegn</string>
     <string name="extension_cannot_be_empty">Filtypen kan ikke stå tom</string>
     <string name="source_file_doesnt_exist">Kildefilen %s eksisterer ikke</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames (before file extension)</string>
+    <string name="prepend_filenames">Tilføj forrest til filnavne</string>
+    <string name="append_filenames">Tilføj bagest til filnavne (men før filtypenavnet)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopier</string>
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">Filen \"%s\" findes allerede. Overskriv?</string>
     <string name="folder_already_exists">Mappen \"%s\" findes allerede</string>
     <string name="merge">Sammenflet</string>
-    <string name="keep_both">Keep both</string>
+    <string name="keep_both">Behold begge</string>
     <string name="overwrite">Overskriv</string>
     <string name="skip">Spring over</string>
     <string name="append">Tilføj \"_1\"</string>
@@ -223,8 +223,8 @@
     <string name="title">Titel</string>
     <string name="filename">Filnavn</string>
     <string name="extension">Filtype</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">Tilfældig</string>
+    <string name="sort_randomly">Tilfældig rækkefølge</string>
     <string name="ascending">Stigende</string>
     <string name="descending">Faldende</string>
     <string name="use_for_this_folder">Anvend kun på denne mappe</string>
@@ -380,7 +380,7 @@
     <string name="extra_large">Ekstra stor</string>
     <string name="password_protect_hidden_items">Beskyt visning af skjulte elementer med en kode</string>
     <string name="password_protect_whole_app">Beskyt hele appen med en adgangskode</string>
-    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
+    <string name="password_protect_file_deletion">Beskyt mod sletning og flytning med en kode</string>
     <string name="keep_last_modified">Kopi/flyt/omdøb skal ikke påvirke ændringstidspunktet</string>
     <string name="show_info_bubble">Vis en info-boble når jeg scroller med rullepanelet</string>
     <string name="prevent_phone_from_sleeping">Forhindr telefonen i at falde i søvn når appen er i forgrunden</string>
@@ -415,7 +415,7 @@
     <string name="files_restored_successfully">Files have been restored successfully</string>
     <string name="empty_recycle_bin_confirmation">Er du sikker på at du vil tømme papirkurven? Filerne vil ikke kunne genskabes.</string>
     <string name="recycle_bin_empty">Papirkurven er tom</string>
-    <string name="moving_recycle_bin_items_disabled">Moving Recycle bin items is disabled, please use Restore</string>
+    <string name="moving_recycle_bin_items_disabled">Flytning af indhold i papirkurven er deaktiveret, gendan i stedet</string>
 
     <plurals name="moving_items_into_bin">
         <item quantity="one">Flytter en fil til papirkurven</item>
@@ -491,8 +491,8 @@
     <string name="sunday_short">Søn</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s. If you download it till then, you will be able to use it for free forever.</string>
+    <string name="upgrade_to_pro_long">Denne version af appen vedligeholdes ikke længere. I stedet er der kommet en Pro-version du kan opgradere til.</string>
+    <string name="it_is_free">Den er stadig gratis indtil: %s. Downloader du den indtil da kan du blive ved at bruge den gratis fremover.</string>
     <string name="more_info">More info</string>
     <string name="upgrade">Upgrade</string>
 
