adding a new string describing Calendar event exporting at Pro upgrade

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -498,6 +498,7 @@
     <string name="it_is_free">És gratuït fins a: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">Més informació</string>
     <string name="upgrade">Actualitza</string>
+    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
 
     <!-- About -->
     <string name="about">Sobre</string>
