--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -517,6 +517,7 @@
     <string name="it_is_free">Je do bezplatné do: %s. Ak ju dovtedy stiahnete, budete ju môcť zadarmo navždy používať.</string>
     <string name="more_info">Viac info</string>
     <string name="upgrade">Stiahnuť</string>
+    <string name="upgrade_calendar">Lokálne uložené udalosti musíte exportovať manuálne do .ics súboru, následne importovať. Tlačidlá pre exportovanie/importovanie nájdete v menu hlavnej obrazovky.</string>
 
     <!-- About -->
     <string name="about">O aplikácií</string>
