--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -495,6 +495,7 @@
     <string name="it_is_free">它在此日期前免費：%s。如果您在這個日期前下載它的話，您就可以永久免費使用它。</string>
     <string name="more_info">更多資訊</string>
     <string name="upgrade">升級</string>
+    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
 
     <!-- About -->
     <string name="about">關於</string>
