--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -495,6 +495,7 @@
     <string name="it_is_free">Es gratis hasta: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">Más informanción</string>
     <string name="upgrade">Actualizar</string>
+    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
 
     <!-- About -->
     <string name="about">Acerca de</string>
