--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -495,6 +495,7 @@
     <string name="it_is_free">免费期限至: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">更多信息</string>
     <string name="upgrade">升级</string>
+    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
 
     <!-- About -->
     <string name="about">关于</string>
