Update zh-rTW translation.

--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -495,7 +495,7 @@
     <string name="it_is_free">它在此日期前免費：%s。如果您在這個日期前下載它的話，您就可以永久免費使用它。</string>
     <string name="more_info">更多資訊</string>
     <string name="upgrade">升級</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_calendar">您必須透過匯出成 .ics 檔案，然後匯入來完成本機導入活動。您可以在主畫面的選單中找到匯入與匯出的按鈕。</string>
 
     <!-- About -->
     <string name="about">關於</string>
