--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -19,7 +19,7 @@
     <string name="none">無</string>
     <string name="label">標籤</string>
     <string name="transparent">透明</string>
-    <string name="transparent_color">透明色彩</string>
+    <string name="transparent_color">透明顏色</string>
     <string name="select_a_different_color">選取不同的顏色</string>
 
     <!-- Favorites -->
@@ -223,8 +223,8 @@
     <string name="title">標題</string>
     <string name="filename">檔案名稱</string>
     <string name="extension">副檔名</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">隨機</string>
+    <string name="sort_randomly">隨機排序</string>
     <string name="ascending">遞增</string>
     <string name="descending">遞減</string>
     <string name="use_for_this_folder">僅套用於此資料夾</string>
@@ -380,7 +380,7 @@
     <string name="extra_large">特大</string>
     <string name="password_protect_hidden_items">用密碼保護隱藏的物件</string>
     <string name="password_protect_whole_app">用密碼保護整個應用程式</string>
-    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
+    <string name="password_protect_file_deletion">用密碼保護檔案刪除或移動</string>
     <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的[最後修改]數值</string>
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
     <string name="prevent_phone_from_sleeping">當程式在前景使用時，防止手機進入睡眠</string>
@@ -492,10 +492,10 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">此版本的應用程式已不再維護。請升級到專業版。</string>
-    <string name="it_is_free">它在此日期前免費：%s。如果您在這個日期前下載它的話，您就可以永久免費使用它。</string>
+    <string name="it_is_free">它在此日期前免費：%s。如果您在到期前下載，將能夠永久免費使用。</string>
     <string name="more_info">更多資訊</string>
     <string name="upgrade">升級</string>
-    <string name="upgrade_calendar">您必須透過匯出成 .ics 檔案，然後匯入來完成本機導入活動。您可以在主畫面的選單中找到匯入與匯出的按鈕。</string>
+    <string name="upgrade_calendar">你必須手動搬移儲存在本機端的活動，透過匯出.ics檔案再接著匯入。你可以在主畫面選單中，找到 匯出/匯入 兩個按鈕。</string>
 
     <!-- About -->
     <string name="about">關於</string>
