--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -495,7 +495,7 @@
     <string name="it_is_free">Ingyenes eddig: %s. Ha eddig letölti, akkor örökre ingyen használhatja.</string>
     <string name="more_info">További információ</string>
     <string name="upgrade">Frissítés</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_calendar">A helyiben tárolt eseményeket kézzel kell átvinni egy .ics fájl exportálásával, majd importálással. Az export / import gomb megtalálható a főmenüben.</string>
 
     <!-- About -->
     <string name="about">Névjegy</string>
