--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -495,7 +495,7 @@
     <string name="it_is_free">È gratuita fino a: %s. Se la scarichi entro quella data, essa sarà gratuita per sempre.</string>
     <string name="more_info">Maggiori informazioni</string>
     <string name="upgrade">Aggiorna</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_calendar">Devi migrare a mano gli eventi salvati localmente esportandoli in un file .ics, poi importandoli. Puoi trovare i pulsanti esporta/importa nel menu della schermata principale.</string>
 
     <!-- About -->
     <string name="about">Informazioni</string>
