--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -517,7 +517,7 @@
     <string name="it_is_free">Это бесплатно до: %s. При загрузке до указанной даты вы получаете её бесплатно навсегда.</string>
     <string name="more_info">Подробнее</string>
     <string name="upgrade">Обновить</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_calendar">Локально сохранённые события необходимо перенести вручную через экспорт и последующий импорт .ics-файла. Кнопки экспорта/импорта находятся в главном меню.</string>
 
     <!-- About -->
     <string name="about">О приложении</string>
