--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -192,7 +192,7 @@
     <string name="solarized">Солнечная</string>
     <string name="dark_red">Тёмно-красная</string>
     <string name="black_white">Чёрно-белая</string>
-    <string name="custom">Своя</string>
+    <string name="custom">Своё</string>
     <string name="shared">Общая</string>
 
     <!-- What's new -->
