escaping some apostrophes

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -498,7 +498,7 @@
     <string name="it_is_free">És gratuït fins a: %s. Si ho descarregueu fins aleshores, podreu utilitzar-lo de forma gratuïta per sempre.</string>
     <string name="more_info">Més informació</string>
     <string name="upgrade">Actualitza</string>
-    <string name="upgrade_calendar">Heu de migrar els esdeveniments emmagatzemats localment manualment mitjançant l'exportació en un fitxer .ics, i després importar-los. Podeu trobar els dos botons d'exportació / importació al menú de la pantalla principal.</string>
+    <string name="upgrade_calendar">Heu de migrar els esdeveniments emmagatzemats localment manualment mitjançant l\'exportació en un fitxer .ics, i després importar-los. Podeu trobar els dos botons d\'exportació / importació al menú de la pantalla principal.</string>
 
     <!-- About -->
     <string name="about">Sobre</string>
