--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -435,6 +435,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Xahiş edirik icazə vermək üçün sonrakı ekranda çıxan OTG cihazın root qovluğunu seçin</string>
     <string name="wrong_root_selected_otg">Yanlış qovluq seçilib, xahiş olunur OTG cihazın root qovluğunu seçin</string>
 
