--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -437,6 +437,7 @@
 
     <!-- OTG devices -->
     <string name="otg">USB OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Veuillez sélectionner le répertoire racine du périphérique USB OTG sur l\'écran suivant afin de pouvoir y accéder</string>
     <string name="wrong_root_selected_otg">Mauvais répertoire sélectionné. Veuillez sélectionner le répertoire racine du périphérique USB OTG.</string>
 
