--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -452,6 +452,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Prašome pasirinkti šakninį OTG įrenginio aplanką kitame lange, kad patvirtinti prieigą</string>
     <string name="wrong_root_selected_otg">Pasirinktas netinkamas aplankas, pasirinkite OTG įrenginio šakninį aplanką</string>
 
