--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -435,6 +435,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Velg rotmappen til OTG-enheten på den neste skjermen for å gi tilgang</string>
     <string name="wrong_root_selected_otg">Feil mappe valgt, velg rotmappen til OTG-enheten din</string>
 
