--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -435,6 +435,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Por favor, escolha a pasta raiz do dispositivo OTG na próxima tela, para conceder acesso</string>
     <string name="wrong_root_selected_otg">Pasta errada selecionada, selecione a pasta raiz do seu dispositivo OTG</string>
 
