--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -478,6 +478,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Izberitre korensko mapo naprave OTG na naslednjem zaslonu, da odobrite dostop</string>
     <string name="wrong_root_selected_otg">Izbrana je bila napapačna mapa. Prosimo, izberite korensko mapo naprave OTG.</string>
 
