--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -435,6 +435,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
+    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
     <string name="confirm_otg_storage_access_text">Välj rotmappen på OTG-enheten på nästa skärm, för att ge åtkomst</string>
     <string name="wrong_root_selected_otg">Du har valt fel mapp, välj rotmappen på din OTG-enhet</string>
 
