--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">Já existe um ficheiro com o nome \"%s\". Substituir?</string>
     <string name="folder_already_exists">Já existe uma pasta com o nome \"%s\"</string>
     <string name="merge">Unir</string>
-    <string name="keep_both">Mnater ambos</string>
+    <string name="keep_both">Manter ambos</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
     <string name="append">Anexar \'_1\'</string>
@@ -411,7 +411,7 @@
     <string name="restore_this_file">Restaurar este ficheiro</string>
     <string name="restore_selected_files">Restaurar os ficheiros selecionados</string>
     <string name="restore_all_files">Restaurar todos os ficheiros</string>
-    <string name="recycle_bin_emptied">A reciclagem foi esvaziada</string>
+    <string name="recycle_bin_emptied">A reciclagem foi limpa</string>
     <string name="files_restored_successfully">Os ficheiros foram restaurados</string>
     <string name="empty_recycle_bin_confirmation">Tem a certeza de que deseja esvaziar a reciclagem? Todos os itens serão apagados permanentemente.</string>
     <string name="recycle_bin_empty">A reciclagem está vazia</string>
@@ -435,7 +435,7 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
-    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
+    <string name="otg_detected">Parece que não existe um dispositivo OTG conectado ao seu dispositivo. Para se certificar de que o ficheiro aparece, necessita de conceder algumas permissões extra.</string>
     <string name="confirm_otg_storage_access_text">Escolha a pasta raiz do dispositivo OTG no ecrã seguinte para conceder o acesso</string>
     <string name="wrong_root_selected_otg">Escolheu uma pasta inválida, deve selecionar a pasta raiz do dispositivo OTG</string>
 
